src/test/resources/json/invalid_inputs/invalid_map_dimension.json.except
Cannot construct instance of `java.lang.Character[]`: no String-argument constructor/factory method to deserialize from String value ('S')